Core package changed, Insert fully working now

--- a/clinic-client/src/main/resource/fxml/addInventory.fxml
+++ b/clinic-client/src/main/resource/fxml/addInventory.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="252.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <bottom>
       <HBox id="hbox-center" prefHeight="50.0" prefWidth="296.0" BorderPane.alignment="CENTER">
          <children>
@@ -19,7 +19,7 @@
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="lotNoL" text="Label" />
-                  <TextField fx:id="lotNoT" prefWidth="113.0" />
+                  <TextField fx:id="lotNoT" prefWidth="158.0" />
                   <Button id="lookup-button" fx:id="lotNoB" mnemonicParsing="false" />
                </children>
             </HBox>
@@ -31,14 +31,14 @@
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="medicineL" text="Label" />
-                  <TextField fx:id="medicineT" prefWidth="113.0" />
+                  <TextField fx:id="medicineT" prefWidth="158.0" />
                   <Button id="lookup-button" fx:id="medicineB" mnemonicParsing="false" />
                </children>
             </HBox>
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="locationL" text="Label" />
-                  <TextField fx:id="locationT" prefWidth="113.0" />
+                  <TextField fx:id="locationT" prefWidth="158.0" />
                   <Button id="lookup-button" fx:id="locationB" mnemonicParsing="false" />
                </children>
             </HBox>
@@ -46,30 +46,32 @@
                <children>
                   <Label id="mandatory-label" fx:id="purchaseDateL" text="Label" />
                   <DatePicker fx:id="purchaseD" prefWidth="149.0" />
+                  <TextField fx:id="purchaseT" prefWidth="40.0" />
                </children>
             </HBox>
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="expiryDateL" text="Label" />
                   <DatePicker fx:id="expiryD" prefWidth="149.0" />
+                  <TextField fx:id="expiryT" prefWidth="40.0" />
                </children>
             </HBox>
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="unitL" text="Label" />
-                  <TextField fx:id="unitT" />
+                  <TextField fx:id="unitT" prefWidth="194.0" />
                </children>
             </HBox>
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label id="mandatory-label" fx:id="costL" text="Label" />
-                  <TextField fx:id="costT" />
+                  <TextField fx:id="costT" prefWidth="194.0" />
                </children>
             </HBox>
             <HBox id="hbox-right" prefHeight="32.0" prefWidth="600.0">
                <children>
                   <Label fx:id="barcodeL" text="Label" />
-                  <TextField fx:id="barcodeT" />
+                  <TextField fx:id="barcodeT" prefWidth="194.0" />
                </children>
             </HBox>
          </children>
